Fix unified modal close button alignment

--- a/styles.css
+++ b/styles.css
@@ -675,7 +675,9 @@ CSS-БЛОК 6. МОДАЛЬНОЕ ОКНО
   position: relative;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
+  min-height: 32px;
+  padding: 0 52px 0 0;
   margin-bottom: 16px;
 }
 
@@ -686,8 +688,8 @@ CSS-БЛОК 6. МОДАЛЬНОЕ ОКНО
 
 .modal-close-button {
   position: absolute;
-  right: 0;
   top: 0;
+  right: 0;
   width: 32px;
   height: 32px;
   padding: 0;
@@ -2938,8 +2940,8 @@ CSS-БЛОК 16. АДАПТИВНОСТЬ
   }
 
   .modal-header {
-    flex-direction: column;
-    align-items: stretch;
+    align-items: flex-start;
+    padding-right: 52px;
   }
 
   .filters-modal-actions {
